--- a/exp1.html
+++ b/exp1.html
@@ -17,6 +17,17 @@ th, td {
 
 </style>
 </head>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TKJ69LB86Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TKJ69LB86Z');
+</script>
+
 <body style="background-image: url('blue_bg.jpg');">
 
 <center>
